--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>Welcome to My Web Page</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam excepturi quae est reiciendis, cum accusantium. Praesentium atque reiciendis similique debitis, cupiditate dolorem consectetur, placeat vitae quia laboriosam, autem iste officiis.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam excepturi quae est reiciendis, cum accusantium. Praesentium atque reiciendis similique debitis, cupiditate dolorem consectetur, placeat vitae quia laboriosam, autem iste officiis.</p>
-<script src="main.js"></script>
+<!-- <script src="main.js"></script> -->
+ <!-- <script src="arrays.js"></script> -->
+  <script src="arrays.js"></script>
 </body>
 </html>
