Add classes and object.js files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     
 </head>
 <body>
@@ -13,6 +13,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam excepturi quae est reiciendis, cum accusantium. Praesentium atque reiciendis similique debitis, cupiditate dolorem consectetur, placeat vitae quia laboriosam, autem iste officiis.</p>
 <!-- <script src="main.js"></script> -->
  <!-- <script src="arrays.js"></script> -->
-  <script src="arrays.js"></script>
+  <!-- <script src="arrays.js"></script> -->
+   <script src="js/classes.js"></script>
 </body>
 </html>
